force-app/main/default/objects/Apttus_Config2__OrderIncentiveBenefitData__c/Apttus_Config2__OrderIncentiveBenefitData__c.object-meta.xml
<CustomObject>
    <description>Represents a single benefit data row associated with the incentive benefit for the order</description>
    <label>Order Incentive Benefit Data</label>
    <nameField>
        <displayFormat>OBD-{00000000}</displayFormat>
        <label>Data Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Incentive Benefit Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>