force-app/main/default/objects/Apttus_Config2__OrderIncentiveBenefitData__c/fields/Apttus_Config2__IncentiveId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IncentiveId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated incentive</description>
    <inlineHelpText>ID of the associated incentive</inlineHelpText>
    <label>Incentive</label>
    <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
    <relationshipLabel>Order Incentive Benefit Data</relationshipLabel>
    <relationshipName>OrderIncentiveBenefitData</relationshipName>
    <type>Lookup</type>
</CustomField>