force-app/main/default/objects/Apttus_Config2__OrderIncentiveBenefitData__c/fields/Apttus_Config2__OrderId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OrderId__c</fullName>
    <description>ID of the associated order</description>
    <inlineHelpText>ID of the associated order</inlineHelpText>
    <label>Order</label>
    <referenceTo>Apttus_Config2__Order__c</referenceTo>
    <relationshipLabel>Order Incentive Benefit Data</relationshipLabel>
    <relationshipName>OrderIncentiveBenefitData</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>