force-app/main/default/objects/Apttus_Config2__OrderIncentiveBenefitData__c/fields/Apttus_Config2__RollupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated rollup</description>
    <inlineHelpText>ID of the associated rollup</inlineHelpText>
    <label>Rollup</label>
    <referenceTo>Apttus_Config2__SearchFilter__c</referenceTo>
    <relationshipLabel>Order Incentive Benefit Data</relationshipLabel>
    <relationshipName>OrderIncentiveBenefitData</relationshipName>
    <type>Lookup</type>
</CustomField>